# agentic-bench.github.io

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: deploy.yml
benchmarks/agenticcr-verified/: benchmark_info.json  evaluation_changelog.md  evaluation_versions.json
benchmarks/agenticcr-verified/eval-results/: claude-code-2.1.70_20260313-1400_harbor_comments.jsonl  claude-code-2.1.70_20260313-1400_harbor_trajectory.jsonl  claude-sonnet-4-6_20260308-1400_harness_trajectory.jsonl  (+5 more)
benchmarks/contextcr-verified/: benchmark_info.json  evaluation_changelog.md  evaluation_versions.json
benchmarks/contextcrbench/: benchmark_info.json  evaluation_changelog.md  evaluation_versions.json
benchmarks/scrbench/: benchmark_info.json  evaluation_changelog.md  evaluation_versions.json
docs/: BENCHMARKS.md  METRICS.md  OPERATIONS.md
leaderboard/: benchmark-agenticcr-verified.html  benchmark-contextcr-verified.html  benchmark-contextcrbench.html  benchmark-scrbench.html  evaluation-versions.html  format.html  index.html  script.js  styles.css
leaderboard/data/: benchmark_meta.json  data_agenticcr-verified.json  data_contextcr-verified.json  data_contextcrbench.json  data_scrbench.json  metric_display_names.json  output_filelist.json  statistics.json
leaderboard/templates/: evaluation-versions.html
src/: dataloader.py  evaluator.py  leaderboard.py  test_llm_gateway.py
src/evaluators/: __init__.py  base.py
src/utils/: .env.example  direct_gateway.py  generic_llm_gateway.py  llm_gateway.py  patch_utils.py  provider.py
(+3112 files in other folders)
